# aria

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  Taskfile.yml
aria-body/: Cargo.toml
aria-body/src/: main.rs  signal.rs  trainer.rs  visualizer.rs
aria-brain/: Cargo.toml
aria-brain/data/: aria.memory
aria-brain/src/: cell.rs  config.rs  connection.rs  expression.rs  main.rs  meta_learning.rs  signal.rs  substrate.rs  substrate_v2.rs  vision.rs  web_learner.rs
aria-brain/src/handlers/: health.rs  learning.rs  memory.rs  mod.rs  stats.rs  vision.rs  websocket.rs
aria-brain/src/memory/: episodic.rs  exploration.rs  hierarchy.rs  mod.rs  persistence.rs  types.rs  visual.rs  vocabulary.rs
aria-brain/src/meta_learning/: goals.rs  mod.rs  progress.rs  reward.rs  self_modifier.rs  strategy.rs
aria-brain/src/substrate/: conversation.rs  emergence.rs  emotion.rs  feedback.rs  lifecycle.rs  mod.rs  self_modify.rs  shadow_brain.rs  signals.rs  spontaneous.rs  types.rs
aria-compute/: Cargo.toml
aria-compute/examples/: check_gpu.rs
aria-compute/src/: compiler.rs  lib.rs  spatial.rs  spatial_gpu.rs
aria-compute/src/backend/: cpu.rs  gpu.rs  gpu_soa.rs  mod.rs
aria-compute/src/backend/gpu_soa/: bind_groups.rs  buffers.rs  config.rs  dispatch.rs  layouts.rs  mod.rs  pipelines.rs
aria-compute/src/shaders/: cell_update.rs  cluster.rs  dispatch.rs  hebbian.rs  lifecycle.rs  mod.rs  prediction.rs  signal.rs  utility.rs
aria-core/: Cargo.toml
aria-core/src/: activity.rs  cell.rs  config.rs  dna.rs  error.rs  lib.rs  signal.rs  soa.rs  tension.rs  traits.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  CONCEPTS.md  GETTING_STARTED.md
logs/: conversation_2025-12-28_genesis.md
scripts/: autonomous_trainer.py  run_overnight.sh  tune_economy.py
