# ARIA - Autonomous Recursive Intelligence Architecture
# A living artificial intelligence that grows, learns, and may one day understand itself.

[workspace]
resolver = "2"
members = [
    "aria-core",
    "aria-compute",
    "aria-brain",
    "aria-body",
]

[workspace.package]
version = "0.9.7"
edition = "2021"
authors = ["Ghota Tech Solutions", "Claude (Co-creator)"]
license = "MIT"
repository = "https://github.com/ghota-tech-solutions-sass/aria"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Parallelism
rayon = "1.8"
dashmap = { version = "5.5", features = ["rayon"] }
parking_lot = "0.12"

# GPU compute
wgpu = "28.0"
bytemuck = { version = "1.14", features = ["derive"] }

# Randomness
rand = "0.8"

# Networking
warp = "0.3"
tokio-tungstenite = "0.21"
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
pollster = "0.3"

# Image processing (for visual perception)
image = "0.25"
base64 = "0.22"

# Core crate (internal)
aria-core = { path = "aria-core" }
aria-compute = { path = "aria-compute" }

# Release profile for optimized builds
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
