[package]
name = "aria-body"
version.workspace = true
edition.workspace = true
description = "ARIA Body - The interface for human-ARIA interaction"
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
futures-util = { workspace = true }

# Network
tokio-tungstenite = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# TUI
crossterm = "0.27"
ratatui = "0.25"

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = "0.4"
rand = "0.8"

[[bin]]
name = "aria-body"
path = "src/main.rs"
