[package]
name = "aria-brain"
version = "0.1.0"
edition = "2021"
description = "ARIA Brain - The living substrate where cells evolve"
authors = ["Ghota Tech Solutions"]
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
rayon = "1.8"
rand = "0.8"
parking_lot = "0.12"
futures = "0.3"
tokio-tungstenite = "0.21"
uuid = { version = "1.6", features = ["v4"] }
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GPU support (optional, for RTX 2070)
[target.'cfg(target_os = "linux")'.dependencies]
# cudarc = { version = "0.10", optional = true }

[features]
default = []
# cuda = ["cudarc"]

[[bin]]
name = "aria-brain"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
