[package]
name = "aria-brain"
version.workspace = true
edition.workspace = true
description = "ARIA Brain - The living substrate where cells evolve"
authors.workspace = true
license.workspace = true
default-run = "aria-brain"

[dependencies]
# Internal crates
aria-core = { workspace = true }
aria-compute = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# Web/Network
warp = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Parallelism
dashmap = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }

# Utilities
rand = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = "0.4"

# Image processing (visual perception)
image = { workspace = true }
base64 = { workspace = true }

[[bin]]
name = "aria-brain"
path = "src/main.rs"

[[bin]]
name = "aria-train"
path = "src/bin/train.rs"

[dev-dependencies]
tempfile = "3"
