[package]
name = "aria-core"
description = "Core types and traits for ARIA - The living substrate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bytemuck = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
